--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
+    "@formspree/react": "^3.0.0",
     "@mui/icons-material": "6.5.0",
     "@mui/material": "6.5.0",
     "@mui/material-nextjs": "^7.3.3",
