--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@mui/system": "6.5.0",
     "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
